# hterm

./: .gitattributes  .gitignore  LICENSE  Main.hs  README.md  Static.hs  hterm.cabal  stack.yaml
hterm-static/: ext.js  index.html  main.css  main.js
static/: index.html  main.css  main.js
