name:                hterm
version:             0.4.1.0
synopsis:            Remote terminal in your broswer.
description:         Remote terminal in your broswer. 
license:             MIT
license-file:        LICENSE
author:              winterland
maintainer:          winterland1989@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  README.md
                    ,   hterm-static/*.js
                    ,   hterm-static/*.css
                    ,   hterm-static/*.html

cabal-version:       >=1.10

executable hterm
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:        base ==4.*
                    ,   base64-bytestring >= 1.0
                    ,   wai-app-static >= 3.1.3
                    ,   warp >= 3.1.3
                    ,   wai >= 3.2
                    ,   bytestring >= 0.10
                    ,   cryptohash >= 0.10
                    ,   text >= 1.2.1.3
                    ,   mime-types >= 0.1.0.0
                    ,   filepath >= 1.4.0.0
                    ,   websockets >= 0.9
                    ,   wai-websockets >= 3.0
                    ,   posix-pty >= 0.2
                    ,   unix >= 2.7
                    ,   process >= 1.3
                    ,   hdaemonize >= 0.5

  ghc-options:     -Wall -O2 -threaded
  -- hs-source-dirs:      
  default-language:    Haskell2010
